[metadata]
name = lexbg-dl
version = 0.0.1
description = Exporter for downloading HTML documents from Lex BG
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com
author = baba.ginka
author_email = baba.ginka@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    aiohttp>=3.7.2
    lxml>=4.6.1
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    lexbg-dl = main:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
